# Jaffe

./: .gitignore  CMakeLists.txt  CNN.h  Darknet19.cpp  activation.cpp  caffemodel2bin.py  common.cpp  convolution_mm.cpp  darknet19.cpp  darknet19.h  darknet19_mbn.cpp  darknet19_mbn.h  main.cpp
darknet19/: Darknet19.prototxt  caffemodel2bin.py
darknet19_mbn/: caffemodel2bin.py  darknet19_mbn.prototxt
